--- a/style.css
+++ b/style.css
@@ -1,111 +1,109 @@
 * {
-    background-color: #808080;
+  background-color: #808080;
 }
 
 @font-face {
-    font-family: 'pastry-font';
-    src: url(RubikIso-Regular.ttf) format('truetype');
+  font-family: "pastry-font";
+  src: url(RubikIso-Regular.ttf) format("truetype");
 }
 
 @font-face {
-    font-family: 'main-text-font';
-    src: url(SpecialElite-Regular.ttf) format('truetype');
+  font-family: "main-text-font";
+  src: url(SpecialElite-Regular.ttf) format("truetype");
 }
 
 body {
-    font-family: main-text-font, sans-serif;
-    padding-top: 65px;
-    font-size: 1rem;
+  font-family: main-text-font, sans-serif;
+  padding-top: 65px;
+  font-size: 1rem;
 }
 .pastry-playground-title {
-    font-family: pastry-font, sans-serif;
-    font-size: 0.8rem;
-    margin-right: 50px;
+  font-family: pastry-font, sans-serif;
+  font-size: 0.8rem;
+  margin-right: 50px;
 }
 
 .pastry-playground-logo img {
-    position: fixed;
-    top: 0;
-    left: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .header-bar {
-    display: flex;
-    flex-direction: row;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 60px;
-    justify-content: space-evenly;
-    flex: 1;
-    position: fixed;
-    border-bottom: groove 2px black;
-    opacity: 100%;
+  display: flex;
+  flex-direction: row;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  justify-content: space-evenly;
+  flex: 1;
+  position: fixed;
+  border-bottom: groove 2px black;
+  opacity: 100%;
 }
 
 h2 {
-    font-family: 'pastry-font', sans-serif;
+  font-family: "pastry-font", sans-serif;
 }
 
-
 .btn {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 button > a {
-    color: rgb(0, 0, 0);
-    font-size: 1.5rem;
+  color: rgb(0, 0, 0);
+  font-size: 1.5rem;
 }
 
 .nav-bar {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 9px;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 9px;
 }
 
 button {
-    border: none;
-    margin-top: 7px;
-    font-family: pastry-font, sans-serif;
+  border: none;
+  margin-top: 7px;
+  font-family: pastry-font, sans-serif;
 }
 
 .split-section {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
 }
 
 .recipe-section-1 .recipe-image-1,
 .recipe-section-2 .recipe-image-2 {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 .recipe-section-1 .recipe-image-1 img,
 .recipe-section-2 .recipe-image-2 img {
-    border-radius: 20px;
-    width: 300px;
-    opacity: 70%;
+  border-radius: 20px;
+  width: 300px;
+  opacity: 70%;
 }
 
-.recipe-section-1, .recipe-section-2 {
-    border: dotted 2px black;
-    display: flex;
-
+.recipe-section-1,
+.recipe-section-2 {
+  border: dotted 2px black;
+  display: flex;
 }
 
 footer {
-    background-color: hsl(0, 50%, 35%);
-    display: flex;
-    justify-content: space-evenly;
-    position: fixed;
-    border-top: groove 2px black;
-    bottom: 0;
-    left: 0;
-    height: 60px;
-    width: 100%;
-    align-items: center;
-
+  background-color: hsl(0, 50%, 35%);
+  display: flex;
+  justify-content: space-evenly;
+  position: fixed;
+  border-top: groove 2px black;
+  bottom: 0;
+  left: 0;
+  height: 60px;
+  width: 100%;
+  align-items: center;
 }
 
 footer,
@@ -116,35 +114,41 @@ footer,
 .social-media-2,
 .social-media-3,
 .copyright-text {
-    background-color: hsl(0, 50%, 35%);
+  background-color: hsl(0, 50%, 35%);
 }
 
-.social-media-links { 
-    display: flex;
-    align-items: center;
-    cursor: pointer;
+.social-media-links {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
-
 
 .social-media-links button {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .social-media-links button:hover,
-.nav-bar button:hover
-{
-    animation: bounce 0.6s ease 0.1s;
+.nav-bar button:hover {
+  animation: bounce 0.6s ease 0.1s;
 }
 
 @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-        transform: translateY(0);
-    }
-    40% {
-        transform: translateY(-10px);
-    }
-    60% {
-        transform: translateY(-5px);
-    }
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
 }
 
+#croissant {
+  max-height: 100px;
+  max-width: 100px;
+}
